--- a/blog/templates/posts/detail.html
+++ b/blog/templates/posts/detail.html
@@ -2,15 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{{ project.title}}</title><!-- Link to the external CSS file -->
+  <title>{{ post.title }}</title><!-- Link to the external CSS file -->
+  <link rel="stylesheet" href="/static/css/globals.css">
   <link rel="stylesheet" href="/static/css/navbar.css">
   <link rel="stylesheet" href="/static/css/styleguide.css">
-  <link rel="stylesheet" href="/static/css/globals.css">
-  <link rel="stylesheet" href="/static/css/cards.css">
+  
 </head>
-
 <body>
-
+  
     <!-- Navbar -->
     <nav class="navbar">
         <div class="home-view">
@@ -24,8 +23,5 @@
             </div>
         </div>
     </nav>
-<h1>{{ project.title }}</h1>
-<ul>
-    <li>{{ project.description }}</li>
-    
-</ul>
+
+    <h1>{{ post.title }}</h1>
