--- a/blog/templates/posts/index.html
+++ b/blog/templates/posts/index.html
@@ -2,15 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Projects</title><!-- Link to the external CSS file -->
+  <title>Blog</title><!-- Link to the external CSS file -->
+  <link rel="stylesheet" href="/static/css/globals.css">
   <link rel="stylesheet" href="/static/css/navbar.css">
   <link rel="stylesheet" href="/static/css/styleguide.css">
-  <link rel="stylesheet" href="/static/css/globals.css">
   <link rel="stylesheet" href="/static/css/cards.css">
+  
 </head>
-
 <body>
-
+  
     <!-- Navbar -->
     <nav class="navbar">
         <div class="home-view">
@@ -25,27 +25,18 @@
         </div>
     </nav>
 
-    <!-- Content Area with Project Cards -->
     <div class="content">
-        <h1 class="page-header">Projects</h1>
+        <h1>Posts</h1>
 
         <!-- Loop through projects and display cards -->
-        {% if projects_list %}
-            {% for project in projects_list %}
-                <div class="project-card">
-                    {% if project.hero_photo %}
-                        <img class="card-image" src="{{project.hero_photo.url}}"></img>
-                        {% endif %} 
-                    <a href="/projects/{{ project.id }}/">
-                        <h2>{{ project.title }}</h2>
-                        <p>{{ project.description }}</p>
+        {% if post_list %}
+            {% for post in post_list %}
+                <div class="blog-card">
+                    <a href="/blog/{{ post.id }}/">
+                        <h2>{{ post.title }}</h2>
                     </a>
                 </div>
             {% endfor %}
         {% else %}
-            <p>No projects to display.</p>
+            <p>No posts to display.</p>
         {% endif %}
-    </div>
-
-</body>
-</html>
