--- a/static/css/cards.css
+++ b/static/css/cards.css
@@ -1,10 +1,16 @@
+.cards .page-header {
+    color: var(--Navy-90);
+    font-family: Arial, sans-serif;
+    font-weight: 800;
+    font-size: 48px;
+    text-decoration: none;
+  }
 
-
-.project-card {
+.cards .project-card {
     display: flex;
     width: 80%; 
-    max-width: 500px; 
-    height: 300px;
+    max-width: 600px; 
+    height: 350px;
     flex-shrink: 0;
     margin-left: 5%; 
     margin-right: 5%; 
@@ -16,17 +22,35 @@
 
 }
 
-.project-card:nth-child(odd) {
-    margin-left: 60%;
+.cards .project-card:nth-child(odd) {
+    margin-left: 50%;
     background: var(--Navy-10, #E8E9EE);
 }
 
-.project-card .card-image {
+
+
+.cards .project-card .card-image {
     display: block;
     width: 100%;
 }
 
-.blog-card {
+.cards .project-card:hover {
+    max-width: 90%;
+}
+
+.cards .project-card:nth-child(odd):hover {
+    max-width: -90%;
+}
+
+
+.project-heading {
+    color: var(--Navy-90);
+    font-family: Arial, sans-serif;
+    font-weight: 800;
+    text-decoration:none;
+}
+
+.cards .blog-card {
     display: flex;
     width: 80%; 
     max-width: 500px; 
@@ -41,7 +65,7 @@
     margin: 50px;
 }
 
-.blog-card:nth-child(odd) {
+.cards .blog-card:nth-child(odd) {
     margin-left: 60%;
     background: var(--Navy-10, #E8E9EE);
 }
