--- a/blog/templates/posts/index.html
+++ b/blog/templates/posts/index.html
@@ -16,16 +16,20 @@
         <div class="home-view">
             <a class="home-view" href="/">LUCY DUNSHEA</a>
         </div>
+        <div class="map-view">
+            <a class="map-view" href="/map/">MAP</a>
+            </div>
         <div class="projects-view">
             <a class="projects-view" href="/projects/">PROJECTS</a>
             </div>
         <div class="blog-view">
             <a class="blog-view" href="/blog/">BLOG</a>
             </div>
+        
         </div>
     </nav>
 
-    <div class="content">
+    <div class="cards">
         <h1>Posts</h1>
 
         <!-- Loop through projects and display cards -->
