--- a/projects/templates/projects/index.html
+++ b/projects/templates/projects/index.html
@@ -15,30 +15,32 @@
     <nav class="navbar">
         <div class="home-view">
             <a class="home-view" href="/">LUCY DUNSHEA</a>
-        </div>
+            </div>
         <div class="projects-view">
             <a class="projects-view" href="/projects/">PROJECTS</a>
             </div>
         <div class="blog-view">
             <a class="blog-view" href="/blog/">BLOG</a>
             </div>
-        </div>
+        <div class="map-view">
+            <a class="map-view" href="/map/">MAP</a>
+            </div>
     </nav>
 
     <!-- Content Area with Project Cards -->
     <div class="cards">
-        <h1 class="page-header">Projects</h1>
+        <h1 class="page-header">PROJECTS</h1>
 
         <!-- Loop through projects and display cards -->
         {% if projects_list %}
             {% for project in projects_list %}
                 <div class="project-card">
                     {% if project.hero_photo %}
-                        <img class="card-image" src="{{project.hero_photo.url}}"></img>
+                        <img class="card-image" src="{{project.hero_photo.url}}" href="/projects/{{ project.id }}/"></img>
                         {% endif %} 
                     <a class="project-heading" href="/projects/{{ project.id }}/">
-                        <h2 class="project-heading">{{ project.title }}</h2>
-                        <p>{{ project.description }}</p>
+                        <h2 >{{ project.title }}</h2>
+                        <p class="project-body">{{ project.description }}</p>
                     </a>
                 </div>
             {% endfor %}
