--- a/static/css/cards.css
+++ b/static/css/cards.css
@@ -4,6 +4,8 @@
     font-weight: 800;
     font-size: 48px;
     text-decoration: none;
+    padding-left: 10%;
+    padding-bottom: 100px;
   }
 
 .cards .project-card {
@@ -22,31 +24,37 @@
 
 }
 
+.cards .project-card:hover {
+    color:var(--Navy-90);
+}
+
 .cards .project-card:nth-child(odd) {
     margin-left: 50%;
     background: var(--Navy-10, #E8E9EE);
 }
 
-
+.cards .project-card:nth-child(odd):hover {
+    color:var(--Navy-90);
+}
 
 .cards .project-card .card-image {
     display: block;
     width: 100%;
 }
 
-.cards .project-card:hover {
-    max-width: 90%;
-}
-
-.cards .project-card:nth-child(odd):hover {
-    max-width: -90%;
-}
-
-
-.project-heading {
+ .cards .project-heading {
     color: var(--Navy-90);
     font-family: Arial, sans-serif;
     font-weight: 800;
+    text-decoration:none;
+    margin: 5px;
+    padding: 10px;
+}
+
+ .project-heading .project-body {
+    color: var(--Navy-90);
+    font-family: Arial, sans-serif;
+    font-weight: 500;
     text-decoration:none;
 }
 
