--- a/projects/templates/home/index.html
+++ b/projects/templates/home/index.html
@@ -10,11 +10,14 @@
 </head>
 <body>
   
-    <!-- Navbar -->
-    <nav class="navbar">
+     <!-- Navbar -->
+     <nav class="navbar">
         <div class="home-view">
             <a class="home-view" href="/">LUCY DUNSHEA</a>
         </div>
+        <div class="map-view">
+            <a class="map-view" href="/map/">MAP</a>
+            </div>
         <div class="projects-view">
             <a class="projects-view" href="/projects/">PROJECTS</a>
             </div>
