--- a/projects/templates/projects/img_upload.html
+++ b/projects/templates/projects/img_upload.html
@@ -6,6 +6,24 @@
     <title>Project_image</title>
 </head>
 <body>
+
+       <!-- Navbar -->
+       <nav class="navbar">
+        <div class="home-view">
+            <a class="home-view" href="/">LUCY DUNSHEA</a>
+        </div>
+        <div class="map-view">
+            <a class="map-view" href="/map/">MAP</a>
+            </div>
+        <div class="projects-view">
+            <a class="projects-view" href="/projects/">PROJECTS</a>
+            </div>
+        <div class="blog-view">
+            <a class="blog-view" href="/blog/">BLOG</a>
+            </div>
+        </div>
+    </nav>
+    
     <form method = "post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
