--- a/map/templates/map/index.html
+++ b/map/templates/map/index.html
@@ -15,7 +15,8 @@
   crossorigin=""/>
 </head>
 
-<h1>MAP</h1>
+<h1 class="map-view">MAP</h1>
+<a href="/">Back</a>
 <div id="map">
     {% leaflet_map "map" callback="map_init" %}
 </div>
