--- a/map/templates/map/index.html
+++ b/map/templates/map/index.html
@@ -10,30 +10,29 @@
   <link rel="stylesheet" href="/static/css/navbar.css">
   <link rel="stylesheet" href="/static/css/styleguide.css">
   <link rel="stylesheet" href="/static/css/map.css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-  integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-  crossorigin=""/>
 </head>
 
 <h1 class="title-text">Christchurch City</h1>
 <a href="/">Back</a>
-<div id="map">
+<div id="map"></div>
     {% leaflet_map "map" callback="map_init" %}
-</div>
+
 
 <script>
     function map_init(map, options) {
         var lon = 172.6333
         var lat = -43.5299
-        var map = map.setView([lat, lon], 12);
+        map.setView([lat, lon], 12);
         L.tileLayer('https://tiles-cdn.koordinates.com/services;key=5fd34ef40f0342578716600c8e641145/tiles/v4/layer=115053/EPSG:3857/{z}/{x}/{y}.png', {
             maxZoom: 19
         }).addTo(map);
-        
-        var busLocations = L.geoJSON('{{ bus_locations }}').addTo(map);
     
-
-    };
-   
+        var busLocations = '{{ bus_locations_json }}';
+        for (var i = 0; i < busLocations.length; i++) {
+        var location = busLocations[i];
+        var marker = L.marker([location.lat, location.lon])
+          .bindPopup('Bus ID: ' + location.bus_id + '<br>Status: ' + location.status)
+          .addTo(map);
+    }};
 </script>
 </html>
